# xcell

./: .getitgnore  .gitattributes  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  xcell.yml
Applications/: ALL.sh  Common.py  Common_nongallery.py  MeshAdaptation.py  MonoStim.py  NEURON_stim.py  NEURON_stim_xtra.py  PoC_replot.py  SingleCompartment.py  SingularityEffect.py  Statics.sh  Thresholds.py  algoDemo.py  animationTest.py  compareDepthSweep.py  debug_Reilly.py  dummyCell.py  errorMetricTests.py  findThresholds.py  l0Test.py  monoSet.sh  plot_MeshAdaptation.py  polyCell.py  polyCellPost.py  polySet.sh  postDiscretization-nongallery.py  postDiscretization.py  postprocess-nongallery.py  postprocess.py  regularizeTest.py  reilly.py  reillyTest.py  reillyThresholds.csv  replot_formulations.py  singleRun.py  thresholdDemoSet-nogallery.py  thresholdDemoSet.py  thresholdMinimum.py  uniformTest.py
Examples/: Common.py  Common_nongallery.py  README.rst  jupTest.ipynb  plot_MeshAdaptation.py  plot_algorithmOverview.py  plot_comparisons.py  plot_dbs_probe.py  plot_singleStep.py  plot_singularityEffect.py
docs/: .buildinfo  genindex.html  index.html  intro.html  nohup.out  objects.inv  py-modindex.html  searchindex.js
docsrc/: make.bat
tests/: geomTests.py  indexTests.py  interpProfiler.py  metricTests.py  pruneTest.py  pvAnimation.py  ringTest.py  testmpi.py
xCell/: Elements.py  FEM.py  Geometry.py  IO  Meshes.py  Postprocess.py  Visualizers.py  l0Test.py  (+15 more)
(+323 files in other folders)
